css/main.css
html, body { width: 100%; height: 100%; background-color: #5AF9B1; }

* { -webkit-tap-highlight-color: rgba(0,0,0,0); }

@font-face { font-family: 'cloud'; src: url('../fonts/dcc.cloud.otf'); }
.cloud { font-family: 'cloud'; }

#wrapper { width: 100%; height: 100%; position: relative; text-align: center; margin: 0 auto; opacity: 0; }

#copyright { position: absolute; top: 23px; left: 24px; width: 119px; height: 40px; background: url("../img/copyright.png") top left no-repeat; }
#copyright:hover { background-position: -119px 0px; }

#twitter { z-index: 1000; position: absolute; top: 23px; right: 26px; width: 38px; height: 40px; background: url("../img/twitter.png") top left no-repeat; }
#twitter:hover { background-position: -38px 0px; }

#facebook { z-index: 1000; position: absolute; top: 23px; right: 64px; width: 31px; height: 40px; background: url("../img/facebook.png") top left no-repeat; }
#facebook:hover { background-position: -31px 0px; }

#aboutlink { position: absolute; bottom: 35px; left: 35px; width: 53px; height: 15px; background: url("../img/about.png") top left no-repeat; }
#aboutlink:hover { background-position: -53px 0px; }

#legallink { position: absolute; bottom: 35px; right: 35px; width: 52px; height: 14px; background: url("../img/legal.png") top left no-repeat; }
#legallink:hover { background-position: -52px 0px; }

#buttons { width: 362px; height: 65px; margin: 0 auto; position: absolute; bottom: 50px; z-index: 1000; }
#howitworks { position: absolute; top: 0px; left: 0px; width: 182px; height: 65px; background: url("../img/howitworks.png") top left no-repeat; }
#howitworks:hover { background-position: -182px 0px; }
#store { position: absolute; top: 0px; right: 0px; width: 181px; height: 65px; background: url("../img/appstore.png") top left no-repeat; }
#store:hover { background-position: -181px 0px; }

#videobutton { cursor: pointer; position: absolute; top: 5px; left: 38px; width: 97px; height: 52px; z-index: 100; display: none; background: url("../img/video.png") top left no-repeat; }
#videobutton:hover { background-position: -97px 0px; }

#videothumb:active { -webkit-transform: scale(.95,.95);
	-webkit-transition:all .1s ease-in;
	-moz-transition:all .1s ease-in;
	-o-transition:all .1s ease-in;
	transition:all .1s ease-in;
}

#sections .section { opacity: 0; display: none; }

@-webkit-keyframes fadeInFromNone {
    0% {
        display:none; 
        opacity: 0;
    }

    1% {
        display: block ; 
        opacity: 0;
    }

    100% {
        display: block ; 
        opacity: 1;
    }
}

#sections .on {	display: block; opacity: 1;
	-webkit-animation-duration: 0.5s;
	-webkit-animation-name: fadeInFromNone;
}

/*
	VIDEO PLAYER
*/
#video { position: relative; margin: 0px auto; width: 960px; height: 580px; z-index: 100; padding-top: 80px; }

#logo { cursor: pointer; position: absolute; top: 0px; left: 0px; width: 374px; height: 389px; }
#playbutton { cursor: pointer; position: absolute; top: 0px; left: 0px; width: 60px; height: 58px; }

#videocontainer { position: absolute; top: 80px; left: 28px; width: 854px; height: 510px; display: none; }
#player { width: 100%; height: 100%; }
#videocontainer .close { cursor: pointer; position: absolute; right: -80px; top: 0px; width: 50px; height: 49px; background: url("../img/closesection.png") top left no-repeat; }
#videocontainer .close:hover { background-position: -50px 0px; }

/*
	INTERACTIVE INSTRUCTIONS
*/

#instructions { width: 440px; margin: 0 auto; position: relative; padding-top: 80px; }
#instructions .instruction { display: none; }
#instructions .on { display: block; }
#instructions .visual { display: block; width: 367px; height: 460px; position: absolute; left: 38px; }
#instructions .leftarrow { cursor: pointer; position: absolute; top: 270px; left: 0px; width: 50px; height: 49px; background: url("../img/instructions/previous.png") top left no-repeat; z-index: 100; }
#instructions .leftarrow:hover { background-position-x: -50px; }
#instructions .leftarrow:active { -webkit-transform: scale(.9,.9);
	-webkit-transition:all .1s ease-in;
	-moz-transition:all .1s ease-in;
	-o-transition:all .1s ease-in;
	transition:all .1s ease-in;
}
#instructions .rightarrow { cursor: pointer; position: absolute; top: 270px; right: 0px; width: 50px; height: 49px; background: url("../img/instructions/next.png") top left no-repeat; z-index: 100; }
#instructions .rightarrow:hover { background-position-x: -50px; }
#instructions .rightarrow:active { -webkit-transform: scale(.9,.9);
	-webkit-transition:all .1s ease-in;
	-moz-transition:all .1s ease-in;
	-o-transition:all .1s ease-in;
	transition:all .1s ease-in;
}

/*
	ABOUT INSTRUCTIONS
*/

#about { position: absolute; }
#about p { font-size: 18px; width: 445px; text-align: center; margin-bottom: 34px; line-height: 28px; }
#about .close { position: absolute; top: 0px; right: -100px; width: 50px; height: 49px; background: url("../img/closesection.png") top left no-repeat; }
#about .close:hover { background-position: -50px 0px; }

/*
	LEGAL INSTRUCTIONS
*/

#legal { position: absolute; }
#legal p { font-size: 18px; width: 445px; text-align: center; margin-bottom: 34px; line-height: 28px; }
#legal .close { position: absolute; top: 0px; right: -100px; width: 50px; height: 49px; background: url("../img/closesection.png") top left no-repeat; }
#legal .close:hover { background-position: -50px 0px; }
#legal a:hover { color: #FFFFFF; }

